--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.4.1"
+    "@vuepress/plugin-back-to-top": "^1.5.0",
+    "@vuepress/plugin-medium-zoom": "^1.5.0",
+    "@vuepress/plugin-pwa": "^1.5.0",
+    "vuepress": "^1.5.0"
   }
 }
