--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "@vuepress/plugin-medium-zoom": "^1.5.0",
     "@vuepress/plugin-pwa": "^1.5.0",
     "vuepress": "^1.5.0"
+  },
+  "dependencies": {
+    "markdown-it-task-lists": "^2.1.1"
   }
 }
