--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vuepress": "^1.5.0"
   },
   "dependencies": {
-    "markdown-it-task-lists": "^2.1.1"
+    "markdown-it-task-lists": "^2.1.1",
+    "vuepress-plugin-comment": "^0.7.3"
   }
 }
